Integrate TestJvmProcess